feat: #3 integrate with CKAN
