# src/main/openapi/ckan.yaml
@@ -104,9 +104,17 @@ components:
     PackagesSearchResponse:
       type: object
       properties:
+        help:
+          type: string
+        success:
+          type: boolean
+        result:
+          $ref: "#/components/schemas/PackagesSearchResult"
+    PackagesSearchResult:
+      type: object
+      properties:
         count:
           type: integer
-          description: The number of results found
         results:
           type: array
           items:
@@ -115,7 +123,6 @@ components:
           type: object
           additionalProperties:
             $ref: "#/components/schemas/CkanFacet"
-          description: Aggregated information about facet
     CkanFacet:
       type: object
       properties:
@@ -159,10 +166,8 @@ components:
           $ref: "#/components/schemas/CkanOrganization"
         metadata_created:
           type: string
-          format: date-time
         metadata_modified:
           type: string
-          format: date-time
         url:
           type: string
         language:
@@ -220,10 +225,8 @@ components:
           type: string
         created:
           type: string
-          format: date-time
         last_modified:
           type: string
-          format: date-time
       required:
         - id
         - name
